# turbofox

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml  tasks.py
app/: app.py
app/config/: database.py  settings.py
app/v1/controllers/: v1_router.py
app/v1/controllers/middleware/: bs4_middleware.py
app/v1/repositories/: upgrade.py
app/v1/repositories/migrations/: 001.sql
app/v1/templates/: base.html
static/js/: htmx-2.0.4.js
tests/v1/controllers/: test_v1_router.py
tests/v1/controllers/middleware/: test_bs4_middleware.py
tests/v1/repositories/: test_upgrade.py
